# gjallarhorn

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
docker/grafana/dashboards/: feedback-dashboard.json
docker/grafana/provisioning/dashboards/: default.yml
docker/prometheus/: prometheus.yml
docker/ui/: index.html
docker/webhook-mock/: Dockerfile  package.json  server.js
helm/gjallarhorn/: .helmignore  Chart.yaml  README.md  values-prod.yaml  values.yaml
helm/gjallarhorn/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  postgres-cluster.yaml  postgres-secret.yaml  secret.yaml  service.yaml  servicemonitor.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  postgres-cnpg.yaml  servicemonitor.yaml
migrations/: 001_init.sql
scripts/: get-token.sh  setup.sh  test-api.sh
src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs  validation.rs
src/auth/: mod.rs
src/db/: mod.rs
src/exports/: mod.rs
src/handlers/: auth_handlers.rs  export_handlers.rs  feedback_handlers.rs  health_handlers.rs  mod.rs
src/metrics/: mod.rs
src/models/: mod.rs
src/observability/: logging.rs  mod.rs  request_context.rs
src/repositories/: feedback_repository.rs  mod.rs
src/services/: feedback_service.rs  mod.rs
tests/: integration_tests.rs
