[package]
name = "feedback-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "feedback_api"
path = "src/lib.rs"

[[bin]]
name = "feedback-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Rate limiting
dashmap = "6.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Authentication
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json"] }

# Monitoring & Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
async-trait = "0.1"

# CSV export
csv = "1.3"
